histories対応 #3076
